@@ -14,7 +14,7 @@ print "<div id=\"footer\" class=\"$TEXT_DIRECTION\">";
 			GM_LANG_accept_changes."</a>\n";
 		}
 	}
-	print "<br />Running <a href=\"http://www.sourceforge.net/projects/genmod\" target=\"_blank\">Genmod";
+	print "<br />Running <a href=\"https://www.sourceforge.net/projects/genmod\" target=\"_blank\">Genmod";
 	if (count($CONFIG_PARMS) >1) print " Enterprise";
 	if ($MEDIA_IN_DB) print " VFS";
 	print "</a>  - Version ".GM_VERSION." ".GM_VERSION_RELEASE;
